# goodmap

./: .coveragerc  .gitignore  .gitlab-ci.yml  .gitmodules  .readthedocs.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE.md  Makefile  README.md  app.production.yaml  app.staging.yaml  app.yaml  babel.cfg  config-template.yml  example_data.json  local_frontend.patch  map.html  map.js  pyproject.toml  pyrightconfig.json  requirements.txt
.github/: dependabot.yml
.github/workflows/: codeql.yml  deploy.yml  gitleaks.yml  license-check.yml  post-test-results.yml  production.yml  python-app.yml  release.yml  tests.yml  todo  todo.yaml
authorization/admin/: custom_user_admin.py  permission_admin.py
authorization/forms/: auth_form.py  role_form.py  user_edit_form.py
authorization/models/: __init__.py  roles.py
authorization/views/: login_view.py  roles_view.py
configuration/: urls.py
configuration/forms/: attribute_create_form.py  attribute_form.py  formset.py  type_of_place_form.py  value_form.py
configuration/models/: attribute.py  general_settings.py  type_of_place.py
configuration/views/: general_settings_view.py  type_of_place_view.py
docs/: api.rst  conf.py  development.rst  index.rst  installation.rst  plugins.rst  quickstart.rst
examples/: e2e_test_config.yml  e2e_test_data.json
frontend/: babel.config.js  formatters.js  map.js  map.test.js  package-lock.json  package.json  webpack.config.js
frontend/my-app/: package-lock.json  package.json
frontend/my-app/public/: index.html
frontend/my-app/src/: App.js  index.js
frontend/src/: checkboxes.js  languages.js  map.js
frontend/tests/: map.test.js
goodmap/: __init__.py  admin_api.py  api_models.py  checker.py  clustering.py  config.py  core.py  core_api.py  data_validator.py  db.py  exceptions.py  feature_flags.py  formatter.py  goodmap.py  google_json_db.py  json_security.py  plugin.py
goodmap/data_models/: location.py
goodmap/db/: __init__.py  db_base.py  db_dispatcher.py  extend.py  google_json_db.py  local_json_db.py
goodmap/dto_schemas/: report_location_schema.py
goodmap/frontend/src/: App.js  checkboxes.js  data.json  dictionary.js  index.js
goodmap/platzky/: config.py  db_loader.py  platzky.py  plugin_loader.py  www_handler.py
goodmap/platzky/blog/: blog.py  comment_form.py  db.py  post_formatter.py
goodmap/platzky/db/: db.py  db_loader.py  google_json_db.py  graph_ql_db.py  json_db.py  json_file_db.py
goodmap/platzky/seo/: seo.py
goodmap/platzky/static/: blog.css
goodmap/platzky/templates/: 404.html  base.html  blog.html  body_meta.html  feed.xml  head_meta.html  home.html  page.html  post.html  robots.txt  sitemap.xml
goodmap/services/email_service/: email_service.py
goodmap/static/: map.css  map.js
goodmap/templates/: admin2.html  goodmap-admin.html  map.html
locations/: urls.py
locations/forms/: location_filter_form.py  location_form.py
locations/models/: location.py
locations/views/: __init__.py  location_view.py
problematy/: .gcloudignore  .gitignore  app.yaml  asgi.py  gcs_config.py  manage.py  requirements.txt  settings.py  utils.py
problematy/authorization/: urls.py
problematy/authorization/admin/: __init__.py
problematy/authorization/forms/: __init__.py  user_edit_form.py
problematy/authorization/models/: custom_user.py
problematy/authorization/templatetags/: custom_tags.py
problematy/authorization/views/: __init__.py  logout_view.py  user_view.py
problematy/configuration/: urls.py
problematy/configuration/forms/: __init__.py  attribute_create_form.py  attribute_form.py  general_settings_form.py  type_of_place_form.py
problematy/configuration/models/: __init__.py  attribute.py  type_of_place.py
problematy/configuration/views/: __init__.py  attribute_view.py  type_of_place_view.py
problematy/locations/: urls.py  utils.py
problematy/locations/forms/: __init__.py  location_filter_form.py  location_form.py
problematy/locations/models/: __init__.py  location.py
problematy/locations/views/: __init__.py  ajax_view.py  json_data_viev.py  location_view.py
problematy/problematy/: settings.py  urls.py  view.py  wsgi.py
problematy/static/css/: icons.css
problematy/static/js/: app.js  app.min.js.map
problematy/templates/authorization/: create_role.html  create_user.html  edit_role.html  edit_user.html  login.html  logout.html  roles_list.html  user_list.html
problematy/templates/configuration/: attribute_create.html  attribute_edit.html  attribute_list.html  type_of_place_create.html  type_of_place_edit.html  type_of_place_list.html
problematy/templates/locations/: location_create.html  location_edit.html  location_history.html  location_list.html
problematy/templates/partials/: base.html  footer.html  layout-horizontal.html  layout-vertical.html  left-sidebar.html  topbar.html
static/css/: app.css  custom-styles.css
static/js/: app.min.js  layout.js
static/js/pages/: attribute_list.init.js  inbox.js  (+11 more)
templates/: index.html
templates/authorization/: create_role.html  create_user.html  edit_role.html  edit_user.html  roles_list.html  user_list.html
templates/configuration/: attribute_create.html  attribute_edit.html  attribute_list.html  general_settings.html  type_of_place_create.html  type_of_place_edit.html  type_of_place_list.html
templates/locations/: location_create.html  location_edit.html  location_history.html  location_list.html
templates/partials/: base.html  head-css.html  horizontal-nav.html  layout-preloader.html  left-sidebar.html  title-meta.html  topbar-dark.html  vendor.html
tests/: test_filters.py  test_query.py
tests/e2e_tests/: .prettierrc.js  cypress.config.js  e2e_stress_test_config.yml  e2e_test_config.yml  e2e_test_data.json  eslint.config.mjs  package-lock.json  package.json
tests/unit_tests/: README.md  conftest.py  test_admin_api.py  test_clustering.py  test_config.py  test_core.py  test_core_api.py  test_db.py  test_filters.py  test_formatter.py  test_goodmap.py  test_json_security.py  test_query.py  test_validator.py
translations/: added_words.list  babel.cfg  extractor.py
(+59 files in other folders)
